[gd_scene load_steps=5 format=3 uid="uid://c7j3jwhbmspny"]

[ext_resource type="Script" path="res://Characters/Player/abilities/withhoard_aoe.gd" id="1_mfkn0"]

[sub_resource type="CircleShape2D" id="CircleShape2D_f2a2e"]
radius = 40.0

[sub_resource type="Gradient" id="Gradient_i4u5j"]
offsets = PackedFloat32Array(0.656015, 0.727444)
colors = PackedColorArray(0.197937, 0.197937, 0.197937, 0.2, 0.0156863, 0.0156863, 0.0156863, 0)

[sub_resource type="GradientTexture2D" id="GradientTexture2D_fimvc"]
gradient = SubResource("Gradient_i4u5j")
fill = 1
fill_from = Vector2(0.5, 0.5)
fill_to = Vector2(1, 1)

[node name="WithhoardAOE" type="Node2D"]
script = ExtResource("1_mfkn0")

[node name="witherhoard_hitbox" type="Area2D" parent="."]
collision_layer = 0
collision_mask = 64

[node name="CollisionShape2D" type="CollisionShape2D" parent="witherhoard_hitbox"]
shape = SubResource("CircleShape2D_f2a2e")

[node name="witherhoard_sprite" type="Sprite2D" parent="."]
scale = Vector2(1.27, 1.27)
texture = SubResource("GradientTexture2D_fimvc")

[node name="Timer" type="Timer" parent="."]

[connection signal="body_entered" from="witherhoard_hitbox" to="." method="_on_witherhoard_hitbox_body_entered"]
[connection signal="body_exited" from="witherhoard_hitbox" to="." method="_on_witherhoard_hitbox_body_exited"]
[connection signal="timeout" from="Timer" to="." method="_on_timer_timeout"]
